--- a/EjemplosYejercicios/2/style.css
+++ b/EjemplosYejercicios/2/style.css
@@ -1,29 +1,34 @@
+/* Resetea los márgenes y el padding de todos los elementos */
 *{
     margin: 0;
     padding: 0;
 }
 
+/* Estilos para el contenedor de los artículos */
 .articles{
-    background-color: #000;
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    padding: 1rem;
-    flex-wrap: wrap;
-    width: 100%;
+    background-color: #000; /* Color de fondo negro */
+    display: flex; /* Se usa flexbox para el diseño */
+    gap: 1rem; /* Espacio entre los elementos */
+    justify-content: center; /* Centra los elementos horizontalmente */
+    padding: 1rem; /* Padding alrededor del contenedor */
+    flex-wrap: wrap; /* Permite que los elementos se envuelvan a la siguiente línea */
+    width: 100%; /* Ancho completo */
 }
 
+/* Estilos para cada caja de artículo */
 .box{
-    background-color: #fff;
-    border-radius: .5rem;
+    background-color: #fff; /* Color de fondo blanco */
+    border-radius: .5rem; /* Bordes redondeados */
 }
 
+/* Estilos para el contenedor de la imagen en cada caja */
 .box-img{
-    height: 10rem;
-    width: 7rem;
+    height: 10rem; /* Altura fija */
+    width: 7rem; /* Ancho fijo */
 }
 
+/* Estilos para la imagen en cada caja */
 .box-img img{
-    width: 100%;
-    height: 100%;
+    width: 100%; /* Ancho completo */
+    height: 100%; /* Altura completa */
 }
